test/15-Typing/Signatures/Bad/SmallerEffect/Test.ds
{-# OPTIONS -no-implicit-prelude #-}

import	Base

thing 	:> Int %r1 {read} -> Int -> Int
thing x y = x
